[gd_scene load_steps=11 format=2]

[ext_resource path="res://title_screen/fonts/ARCADECLASSIC.TTF" type="FontFile" id=1]
[ext_resource path="res://01_DAM/Dam_level/Dam_normal/btn_dam_normal_humvee.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/fade_in/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://01_DAM/Dam_level/Dam_normal/btn_dam_normal_moto.tscn" type="PackedScene" id=4]
[ext_resource path="res://01_DAM/Dam_level/Dam_normal/btn_dam_normal_tank.tscn" type="PackedScene" id=5]
[ext_resource path="res://01_DAM/Dam_level/Dam_normal/Dam_level_normal_menu.gd" type="Script" id=6]
[ext_resource path="res://title_screen/000EX.png" type="Texture2D" id=7]
[ext_resource path="res://01_DAM/Dam_level/Dam_normal/btn_dam_normal_ufo.tscn" type="PackedScene" id=8]
[ext_resource path="res://title_screen/back.tscn" type="PackedScene" id=9]

[sub_resource type="FontFile" id=1]
size = 157
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="000EX2" type="Sprite2D" parent="."]
position = Vector2( 511.226, 381.155 )
texture = ExtResource( 7 )

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
offset_left = 0.96511
offset_top = -1.68856
offset_right = 6.96509
offset_bottom = 2.31146
clip_contents = true

[node name="Label" type="Label" parent="."]
offset_left = 64.8439
offset_top = 45.8653
offset_right = 1242.84
offset_bottom = 205.865
scale = Vector2( 0.75, 0.75 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_fonts/font = SubResource( 1 )
text = "Escape war zone "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" parent="." instance=ExtResource( 2 )]
offset_left = 35.0
offset_top = 231.0
offset_right = 300.0
offset_bottom = 310.0

[node name="btn2" parent="." instance=ExtResource( 4 )]
offset_left = 668.0
offset_top = 231.0
offset_right = 864.0
offset_bottom = 310.0

[node name="btn4" parent="." instance=ExtResource( 5 )]
offset_left = 97.983
offset_top = 423.0
offset_right = 290.983
offset_bottom = 502.0

[node name="btn5" parent="." instance=ExtResource( 8 )]
offset_left = 685.99
offset_top = 422.99
offset_right = 860.99
offset_bottom = 501.99

[node name="back" parent="." instance=ExtResource( 9 )]
offset_left = 924.726
offset_top = 550.0
offset_right = 1100.73
offset_bottom = 629.0
scale = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="btn" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="btn2" to="." method="_on_btn2_pressed"]
[connection signal="pressed" from="btn4" to="." method="_on_btn4_pressed"]
[connection signal="pressed" from="btn5" to="." method="_on_btn5_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
